# senbonzakura_kageyoshi

./: .gitignore  Cargo.toml  README.md
node/: Cargo.toml
node/src/: cli.rs  command.rs  main.rs
pallets/template/: Cargo.toml
primitives/: Cargo.toml
primitives/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
