[package]
name = "szk_primitives"
edition.workspace = true
version.workspace = true
authors.workspace = true
license = "MIT"

[dependencies]
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0" }
